ACTUALLY fixed spacing issue on home page on mobile

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -80,7 +80,7 @@ small {
 .headline .btn {
   height: 3em;
   font-size: 1.92em;
-  margin-top: 1.3em;
+  margin-top: 2em;
 }
 
 /* viewer.js adjustments */
